@@ -1,11 +1,8 @@
-import com.google.cloud.tools.jib.gradle.JibTask
-import java.time.LocalDateTime
-import java.time.format.DateTimeFormatter
-
 plugins {
   id("otel.java-conventions")
 
-  id("com.google.cloud.tools.jib")
+  id("com.gradleup.shadow")
+  application
 }
 
 dependencies {
@@ -14,30 +11,11 @@ dependencies {
   implementation("io.opentelemetry:opentelemetry-api")
 }
 
-val targetJDK = project.findProperty("targetJDK") ?: "11"
-
-val tag = findProperty("tag")
-  ?: DateTimeFormatter.ofPattern("yyyyMMdd.HHmmSS").format(LocalDateTime.now())
-
 java {
-  // needed by jib to detect java version used in project
-  // for jdk9+ jib uses an entrypoint that doesn't work with jdk8
   sourceCompatibility = JavaVersion.VERSION_1_8
   targetCompatibility = JavaVersion.VERSION_1_8
 }
 
-val repo = System.getenv("GITHUB_REPOSITORY") ?: "open-telemetry/opentelemetry-java-instrumentation"
-
-jib {
-  from.image = "eclipse-temurin:$targetJDK"
-  to.image = "ghcr.io/$repo/smoke-test-security-manager:jdk$targetJDK-$tag"
-  container.mainClass = "io.opentelemetry.smoketest.securitymanager.Main"
-  container.jvmFlags = listOf("-Djava.security.manager", "-Djava.security.policy=/app/resources/security.policy")
-}
-
-tasks {
-  withType<JibTask>().configureEach {
-    // Jib tasks access Task.project at execution time which is not compatible with configuration cache
-    notCompatibleWithConfigurationCache("Jib task accesses Task.project at execution time")
-  }
+application {
+  mainClass.set("io.opentelemetry.smoketest.securitymanager.Main")
 }
